--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header class="mt-4 ms-5 text-primary text-center">
-    <h1><i class="fa-regular fa-circle-user text-danger"></i>&nbsp THE EMPLOYEE BOOK</h1>
+    <h1><i class="fa-regular fa-circle-user text-secondary"></i>&nbsp THE EMPLOYEE BOOK</h1>
   </header>
   <app-root></app-root>
  <footer>
